MNEMONIC-683: Remove deprecation warning during gradle build
Signed-off-by: Xiaojin Jiao <xjiao@apache.org>